Added custom fonts to the program